fixed menu overflow

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -80,7 +80,6 @@
 .hero-image {
   margin-top: 50px;
   width: 100%;
-  border: 2px solid hotpink;
 }
 
 
