--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -66,3 +66,8 @@
   column-width: 60px;
   max-width: 600px;
 }
+
+.menu-container {
+  border: 2px solid hotpink;
+  overflow: hidden;
+}
